<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/icon_login_bg_new">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_login_info_header"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_128"
        android:layout_centerHorizontal="true"
        tools:src="@drawable/icon_login_info_header" />

    <TextView
        android:layout_below="@id/iv_login_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/text_white"
        android:text="@string/login_info_header_tip"
        />


    <EditText
        android:id="@+id/et_login_info_nickname"
        android:layout_below="@+id/iv_login_info_header"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_46"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@drawable/bg_login_phone_edit_state"
        android:textSize="16sp"
        android:textColor="@color/text_white"
        tools:text="您的昵称"
        />



    <Button
        android:id="@+id/btn_login_info_save"
        android:layout_below="@id/et_login_info_nickname"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon_login_bt_bg"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/text_white"
        android:text="@string/text_save"
        />




    <Button
        android:id="@+id/btn_login_info_last"
        android:layout_below="@id/btn_login_info_save"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon_login_bt_bg"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/text_white"
        android:text="@string/text_last"
        />

    <TextView
        android:id="@+id/tv_login_skip"
        android:layout_below="@id/btn_login_info_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_white"
        android:text="@string/text_skip"
        />


    <View
        android:layout_below="@id/tv_login_skip"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/red_FE3C9C"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>